# McSoftServe

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  libretro.cpp  mcsoftserve_libretro.info  mctaylor_libretro.info
cmake/: ConfigureFeatures.cmake  FetchDependencies.cmake  libretro-common.cmake
pntr/: pntr.c
